# Scene-Graph-Benchmark.pytorch

./: ABSTRACTIONS.md  INSTALL.md  METRICS.md  README.md  environment.yml  pyproject.toml  setup.py
maskrcnn_benchmark/config/: paths_catalog.py
maskrcnn_benchmark/csrc/: ROIAlign.h  ROIPool.h  SigmoidFocalLoss.h  deform_conv.h  deform_pool.h  nms.h  vision.cpp
maskrcnn_benchmark/csrc/cpu/: ROIAlign_cpu.cpp  nms_cpu.cpp
maskrcnn_benchmark/csrc/cuda/: ROIAlign_cuda.cu  ROIPool_cuda.cu  SigmoidFocalLoss_cuda.cu  deform_conv_cuda.cu  deform_conv_kernel_cuda.cu  deform_pool_cuda.cu  deform_pool_kernel_cuda.cu  nms.cu  vision.h
maskrcnn_benchmark/layers/: nms.py  roi_align.py  roi_pool.py
maskrcnn_benchmark/utils/: model_zoo.py
tools/: detector_pretest_net.py  relation_test_net.py  relation_train_net.py
