[project]
name = "scene-graph-benchmark-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "overrides>=7.7.0",
    "pycocotools>=2.0.11",
    "scipy>=1.17.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]

[project.optional-dependencies]
cu128 = [
  "torch>=2.7.0; python_version >= '3.9'",
  "torchvision>=0.22.0; python_version >= '3.9'",
  "torchaudio>=2.7.0; python_version >= '3.9'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
